syntaqlite-syntax/include/syntaqlite/parser.h

// ---------------------------------------------------------------------------
// Types
// ---------------------------------------------------------------------------

// Opaque parser handle (heap-allocated, reusable across inputs).
typedef struct SyntaqliteParser SyntaqliteParser;
// Error kind for the current result (valid when rc is RECOVERED or ERROR).
typedef uint32_t SyntaqliteErrorKind;
// A comment captured during parsing.
typedef struct SyntaqliteComment {
  uint32_t offset;  // Byte offset in source.
  uint32_t length;  // Byte length.
  uint8_t kind;     // 0 = line comment (--), 1 = block comment (/* */).
} SyntaqliteComment;
// Token-usage flags: set by the parser during disambiguation to record how
// each token was consumed.  Use SYNQ_TOKEN_FLAG_* as bitmasks on the flags
// field of SyntaqliteParserToken.
typedef uint32_t SyntaqliteParserTokenFlags;
// A non-whitespace, non-comment token position captured during parsing.
typedef struct SyntaqliteParserToken {
  uint32_t offset;                // Byte offset in source.
  uint32_t length;                // Byte length.
  uint32_t type;                  // Original token type from tokenizer (pre-fallback).
  SyntaqliteParserTokenFlags flags;  // Bitmask of SYNQ_TOKEN_FLAG_* values.
} SyntaqliteParserToken;
// A recorded macro invocation region.
// For the input-side begin/end API see incremental.h.
typedef struct SyntaqliteMacroRegion {
  uint32_t call_offset;  // Byte offset of macro call in original source.
  uint32_t call_length;  // Byte length of entire macro call.
} SyntaqliteMacroRegion;
// ---------------------------------------------------------------------------
// Core API
// ---------------------------------------------------------------------------

// Allocate a parser bound to a specific grammar environment.
SyntaqliteParser* syntaqlite_parser_create_with_grammar(
    const SyntaqliteMemMethods* mem,
    SyntaqliteGrammar env);
// Bind a source buffer and reset all internal state. The source must remain
// valid until the next reset() or destroy(). Can be called again to parse a
// new input without reallocating — all previous nodes are invalidated.
void syntaqlite_parser_reset(SyntaqliteParser* p,
                             const char* source,
                             uint32_t len);
// Parse the next SQL statement. Call in a loop until SYNTAQLITE_PARSE_DONE.
// Bare semicolons between statements are skipped automatically.
// The arena is reset at the start of each call — pointers from the previous
// call become invalid.
//
// Returns one of the SYNTAQLITE_PARSE_* codes.
int32_t syntaqlite_parser_next(SyntaqliteParser* p);
// Free the parser, its arena, and all its nodes. No-op if p is NULL.
void syntaqlite_parser_destroy(SyntaqliteParser* p);
// ---------------------------------------------------------------------------
// Result accessors
// Valid until the next syntaqlite_parser_next(), reset(), or destroy() call.
// ---------------------------------------------------------------------------

// Statement root node ID (SYNTAQLITE_NULL_NODE if none / unrecoverable error).
uint32_t syntaqlite_result_root(SyntaqliteParser* p);
// Error kind for the current result.
// - SYNTAQLITE_ERROR_KIND_RECOVERED: parser recovered and produced a partial tree
// - SYNTAQLITE_ERROR_KIND_FATAL: unrecoverable parse error
// - SYNTAQLITE_ERROR_KIND_NONE: no error for this result
SyntaqliteErrorKind syntaqlite_result_error_kind(SyntaqliteParser* p);
// Human-readable error message, or NULL.
const char* syntaqlite_result_error_msg(SyntaqliteParser* p);
// Byte offset of error token (0xFFFFFFFF = unknown).
uint32_t syntaqlite_result_error_offset(SyntaqliteParser* p);
// Byte length of error token (0 = unknown).
uint32_t syntaqlite_result_error_length(SyntaqliteParser* p);
// Per-statement token/comment/macro arrays.
// Token/comment arrays are empty unless collect_tokens is enabled via
// syntaqlite_parser_set_collect_tokens(p, 1) before first reset().
const SyntaqliteComment* syntaqlite_result_comments(SyntaqliteParser* p,
                                                    uint32_t* count);
const SyntaqliteParserToken* syntaqlite_result_tokens(SyntaqliteParser* p,
                                                   uint32_t* count);
const SyntaqliteMacroRegion* syntaqlite_result_macros(SyntaqliteParser* p,
                                                      uint32_t* count);
// ---------------------------------------------------------------------------
// Arena accessors
// ---------------------------------------------------------------------------

// Look up a node by its arena ID. The returned pointer is valid until the
// next syntaqlite_parser_next(), reset(), or destroy(). Cast to the
// dialect-specific node union type and use the tag field to determine which
// member to read.
const void* syntaqlite_parser_node(SyntaqliteParser* p, uint32_t node_id);
// Return the number of nodes currently in the arena.
uint32_t syntaqlite_parser_node_count(SyntaqliteParser* p);
// ============================================================================
// Configuration — call after create(), before first reset()
// ============================================================================

// Enable token/comment collection for result_tokens/result_comments.
// Default: off (0), in which case those arrays are empty.
// Returns 0 on success, -1 if the parser has already been used.
int32_t syntaqlite_parser_set_collect_tokens(SyntaqliteParser* p, uint32_t enable);
// Enable parser trace output (debug builds only). Default: off (0).
// Returns 0 on success, -1 if the parser has already been used.
int32_t syntaqlite_parser_set_trace(SyntaqliteParser* p, uint32_t enable);
// ============================================================================
// Debugging
// ============================================================================

// Error node tag — stored as the first uint32_t of a SyntaqliteErrorNode.
#define SYNTAQLITE_ERROR_NODE_TAG 0u
// An error placeholder node stored in the arena when a parse error occurs.
typedef struct SyntaqliteErrorNode {
  uint32_t tag;     // Always SYNTAQLITE_ERROR_NODE_TAG (0).
  uint32_t offset;  // Byte offset of the error in source.
  uint32_t length;  // Byte length of the error token (0 = unknown).
} SyntaqliteErrorNode;
// Dump an AST node tree as indented text. Returns a malloc'd NUL-terminated
// string. The caller must free() the result. Returns NULL on allocation failure.
char* syntaqlite_dump_node(SyntaqliteParser* p,
                           uint32_t node_id,
                           uint32_t indent);