syntaqlite-syntax/include/syntaqlite/incremental.h

// ---------------------------------------------------------------------------
// Token feeding
// ---------------------------------------------------------------------------

// Feed a single token. TK_SPACE is silently skipped. TK_COMMENT is recorded
// as a comment (when collect_tokens is enabled) but not fed to the parser.
//
// Returns a SYNTAQLITE_PARSE_* code:
//   DONE      = keep going (statement not yet complete)
//   OK        = statement completed cleanly
//   RECOVERED = statement completed with error recovery
//   ERROR     = unrecoverable parse error
int32_t syntaqlite_parser_feed_token(SyntaqliteParser* p,
                                     uint32_t token_type,
                                     const char* text,
                                     uint32_t len);
// Signal end-of-input. Synthesizes a SEMI if needed and sends EOF to the
// parser. Returns a SYNTAQLITE_PARSE_* code.
int32_t syntaqlite_parser_finish(SyntaqliteParser* p);
// ---------------------------------------------------------------------------
// Completion / lookahead
// ---------------------------------------------------------------------------

// Enumerate terminal tokens that are valid next lookaheads at the parser's
// current state. Returns the total number of expected tokens.
// If out_tokens is non-NULL, up to out_cap token IDs are written.
uint32_t syntaqlite_parser_expected_tokens(SyntaqliteParser* p,
                                           uint32_t* out_tokens,
                                           uint32_t out_cap);
// Return the semantic completion context at the parser's current state.
// One of SYNTAQLITE_COMPLETION_CONTEXT_*.
SyntaqliteCompletionContext syntaqlite_parser_completion_context(
    SyntaqliteParser* p);
// ---------------------------------------------------------------------------
// Macro region tracking
// ---------------------------------------------------------------------------

// Mark subsequent fed tokens as being inside a macro expansion.
// call_offset/call_length describe the macro call's byte range in the
// original source. Calls may nest (for nested macro expansions).
void syntaqlite_parser_begin_macro(SyntaqliteParser* p,
                                   uint32_t call_offset,
                                   uint32_t call_length);
// End the innermost macro expansion region.
void syntaqlite_parser_end_macro(SyntaqliteParser* p);